<resources>
    <string name="app_name">RealEstate</string>
    <string name="camera_and_location_rationale">\"\"</string>
    <string name="rationale_ask_ok">\"\"</string>
    <string name="rationale_ask_cancel">\"\"</string>
    <string name="mapId">cd804d50136c7384</string>

    <string name="nb_room">%1$s pièces</string>
    <string name="size_estate">%1$s m²</string>
    <string name="estate_dispo">Disponible</string>
    <string name="estate_not_dispo">Non disponible</string>
    <string name="empty_field">Champ requis</string>
    <string name="add_pic">Ajouter au moins une photo</string>
    <string name="error_field">Erreur, vérifiez les champs</string>
    <string name="del_pic">\"Voulez-vous supprimer la photo ? \"</string>
    <string name="add_estate_notif">Ajout du bien immobilier effectué</string>
    <string name="price_buy">Prix</string>
    <string name="add_estate_buy">Rajouter un bien en vente</string>
    <string name="price_per_month">Prix par mois</string>
    <string name="add_estate_loc">Rajouter un bien en location</string>
    <string name="toolbar_title">%1$s, %2$s m², %3$s</string>
    <string name="cant_modif_estate">Vous ne pouvez pas modifier ce bien</string>
    <string name="estate_price">Prix du bien</string>
    <string name="sell">Vente</string>
    <string name="location">Location</string>
    <string name="rent_date">Loué le</string>
    <string name="loan_example">Exemple de prêt possible pour une durée de 25 ans avec un taux d\'intérêt de 1,65 pourcent et un apport égal à 20 pourcent du prix (soit %1$s %2$s)</string>
    <string name="loan_per_month">%1$d %2$s /mois</string>
    <string name="loan">Emprunt</string>
    <string name="charges">Intérêt</string>
    <string name="result_sim">Résultat simulation</string>
    <string name="sell_date">Vendu le</string>
    <string name="validate">valider</string>
    <string name="seven_years">7 ans - Taux d\'intérêt 0,96%</string>
    <string name="ten_years">10 ans - Taux d\'intérêt 1,01%</string>
    <string name="fifteen_years">15 ans - Taux d\'intérêt 1,17%</string>
    <string name="twenty_years">20 ans - Taux d\'intérêt 1,32%</string>
    <string name="twenty_five_years">25 ans - Taux d\'intérêt 1,65%</string>
    <string name="connec_avail">Connexion disponible</string>
    <string name="connec_unavail">Connexion indisponible</string>
    <string name="loc_not_activ">La localisation doit être activée</string>
    <string name="loc_unall">Localisation interdite</string>
    <string name="cant_add_offline">Impossible d\'ajouter un bien en étant hors-ligne</string>
    <string name="type_estate">Type de bien</string>
    <string name="house">Maison</string>
    <string name="apartment">Appartement</string>
    <string name="duplex">Duplex</string>
    <string name="manor">Manoir</string>
    <string name="old_estate">Ancien</string>
    <string name="new_estate">Récent</string>
    <string name="adress">Adresse du bien</string>
    <string name="number">N°</string>
    <string name="vicinity">Adresse</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="country">Pays</string>
    <string name="informations">Informations</string>
    <string name="number_room">Nombre de pièce</string>
    <string name="size">Taille du bien</string>
    <string name="cave">Cave</string>
    <string name="parking">Parking</string>
    <string name="kitchen_area">Coin cuisine</string>
    <string name="open_plane_kitchen">Cuisine ouverte</string>
    <string name="terrace">Terrasse</string>
    <string name="balccony">Balcon</string>
    <string name="description">Description</string>
    <string name="around_estate">Autour du bien</string>
    <string name="schools">Ecole</string>
    <string name="business">Commerces</string>
    <string name="transports">Transports</string>
    <string name="Park">Parc</string>
    <string name="health">Etablissements de soins</string>
    <string name="add_picture">Rajouter photo</string>
    <string name="add">Ajouter</string>
    <string name="criteria">Critères</string>
    <string name="point_of_interest">Point of interest</string>
    <string name="online">Mis en ligne</string>
    <string name="sim_loan">Simuler un prêt</string>
    <string name="notary_charges">frais de notaire</string>
    <string name="apport">Apport</string>
    <string name="length_loan">Durée du prêt</string>
    <string name="calcul_loan">Calculez votre prêt</string>
    <string name="to_rent">louer</string>
    <string name="to_buy">Acheter</string>
    <string name="map">Carte</string>
    <string name="add_buy">Rajouter vente</string>
    <string name="add_loc">rajouter location</string>
    <string name="buy_estate">Acheter un bien</string>
    <string name="rent_estate">Louer un bien</string>
    <string name="modify_estate">Modification</string>
    <string name="buy">Achat</string>
    <string name="witch_devise">Quelle devise utiliser ?</string>
    <string name="euro">€</string>
    <string name="dollar">$</string>
    <string name="choice_app">Que voulez-vous choisir ?</string>
    <string name="open_gallery">Ouvrir la galerie</string>
    <string name="open_camera">Prendre une photo</string>
    <string name="btn_filter">Filtrer</string>
</resources>