<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="0dp">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_round_arrow_back_24"
            app:menu="@menu/modify_menu"
            app:title="@string/buy_estate" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/topbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp">

            <com.glide.slider.library.SliderLayout
                android:id="@+id/sliderImg"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sliderImg"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/sizeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/size"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/sizeEstate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/sizeText"
                        app:layout_constraintStart_toStartOf="@id/sizeText"
                        app:layout_constraintEnd_toEndOf="@id/sizeText"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/roomText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_room"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/roomEstate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/roomText"
                        app:layout_constraintStart_toStartOf="@id/roomText"
                        app:layout_constraintEnd_toEndOf="@id/roomText"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/criteriaText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/criteria"
                        app:layout_constraintTop_toBottomOf="@id/sizeEstate"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/listCriteria"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/criteriaText"
                        app:layout_constraintStart_toStartOf="@id/criteriaText"
                        tools:listitem="@layout/list_poi_criteria"
                        app:layout_constraintEnd_toStartOf="@id/poiText"
                        />

                    <TextView
                        android:id="@+id/poiText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/point_of_interest"
                        app:layout_constraintTop_toBottomOf="@id/roomEstate"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="15dp"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/listPoi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/list_poi_criteria"
                        app:layout_constraintTop_toBottomOf="@id/poiText"
                        app:layout_constraintStart_toStartOf="@id/poiText"
                        app:layout_constraintEnd_toEndOf="@id/poiText"/>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                app:layout_constraintTop_toBottomOf="@id/cardview"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/descriptionEstate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/descriptionText"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"/>

            <ImageView
                android:id="@+id/staticImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/descriptionEstate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/textExample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/staticImage"
                android:layout_margin="10dp"/>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/textExample"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online"
                app:layout_constraintTop_toBottomOf="@id/pieChart"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/dateEstate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/dateText"
                app:layout_constraintStart_toStartOf="@id/dateText"
                app:layout_constraintEnd_toEndOf="@id/dateText"
                android:textSize="17sp"
                android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabModify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|bottom"
        android:layout_margin="15dp"
        android:src="@drawable/ic_round_edit_24"/>

</FrameLayout>